python-apt (0.7.92) UNRELEASED; urgency=low

  [ Julian Andres Klode ]
  * Add apt_pkg.HashString and apt_pkg.IndexRecords (Closes: #456141)
  * Add apt_pkg.Policy class (Closes: #382725)
  * Allow types providing __new__() to be subclassed.
  * Bugfix: Delete pointers correctly, fixing memory leaks. (LP: #370149)
  * apt/package.py: Return VersionList objects in Package.versions, which
    are sequences and also provide features of mappings. (small API BREAK)
  * apt/progress/__init__.py: Check for EINTR in select (Closes: #499296)
  * Add support for Enhances as a dependency type (Closes: #416247)
  * apt/cache.py: Provide broken_count, delete_count, install_count, keep_count
    properties (Closes: #532338)
  * apt/cache.py: Correctly handle rootdir on second and later invocations of
    open() (LP: #320665).
  * Add apt_pkg.DepCache.mark_auto() and apt.Package.mark_auto() methods to
    mark a package as automatically installed.
  * Drop apt_pkg.Cache.open() and apt_pkg.Cache.close(), they cause segfaults
    and memory leaks. Simply create a new cache instead.
  * Merge 0.7.10.4 from unstable
  * debian/control: Update Standards-Version to 3.8.2
  * Make AcquireFile a subclass of AcquireItem
  * Make ConfigurationPtr,ConfigurationSub subclasses of Configuration.
  * debian/control: Build-Depend on libapt-pkg-dev (>= 0.7.22~).
  * Unification of dependency handling:
    - apt_pkg.parse_[src_]depends() now use CompType instead of CompTypeDeb
      (i.e. < instead of <<) to match the interface of Version.depends_list_str
    - apt_pkg.SourceRecords.build_depends matches exactly the interface of
      Version.depends_list_str just with different keys (e.g. Build-Depends).
      + Closes: #468123 - there is no need anymore for binding CompType or
        CompTypeDeb, because we don't return integer values for CompType
        anymore.
  * Introduce apt_pkg.Hashes class.
  * Make AcquireItem objects raise ValueError instead of segfaulting when the Acquire()