@@ -54,3 +54,14 @@ Description: Python interface to libapt-pkg (debug extension)
  variety of functions.
  .
  This package contains the extension built for the Python debug interpreter.
+
+Package: python-apt-dev
+Architecture: all
+Depends: python-apt (>= ${source:Version}), libapt-pkg-dev (>= 0.7.10)
+Description: Python interface to libapt-pkg (development files)
+ The apt_pkg Python interface will provide full access to the internal
+ libapt-pkg structures allowing Python programs to easily perform a
+ variety of functions.
+ .
+ This package contains the header files needed to use python-apt objects from
+ C++ applications.
