@@ -1,0 +1,2 @@
+python/python-apt.h usr/include/python-apt/
+python/generic.h usr/include/python-apt/
